--- a/about.html
+++ b/about.html
@@ -25,5 +25,6 @@
         </div>
     </nav>
     I born in 10/17/2009, I live in korea 10 years and went china and live china 2 years. I learn chinese in there, and I return to korea. 
+    And finsh 6th grade and come to America
 <img src = "https://upload.wikimedia.org/wikipedia/commons/a/a9/Flag_of_the_United_States_%28DoS_ECA_Color_Standard%29.svg" width ="400"/>
 </body>
